--- a/src/app/product-description/product-description.component.css
+++ b/src/app/product-description/product-description.component.css
@@ -1,9 +1,9 @@
-.p {
+p {
   font-size:16px;
   font-family: helvetica, Arial, sans-serif;
   font-weight: normal;
 
 }
-.img {
+img {
   width: 100%;
 }
