--- a/src/app/product-tracklisting/product-tracklisting.component.html
+++ b/src/app/product-tracklisting/product-tracklisting.component.html
@@ -1,3 +1,4 @@
+<div class="row tracklisting">
 <ul>
   <li *ngFor = 'let track of albumInfo?.album.tracks'>
     <div class="col-sm-5">
@@ -10,3 +11,4 @@
     </div>
   </li>
 </ul>
+</div>
